samples/_failures_safe/1761262420_7ff73b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1d4f14a.c: In function ‘main’:
./samples/SAFE/__tmp_b1d4f14a.c:147:9: error: expected expression at end of input
  147 |         for (int j = 0; j < entry_count; j++)
      |         ^~~
./samples/SAFE/__tmp_b1d4f14a.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1d4f14a.c:147:9: error: expected declaration or statement at end of input
